# qfolio-arena

./: .gitignore  README.md
.devcontainer/: devcontainer.json
core/: pyproject.toml
docs/: AI_USAGE.md
